@@ -2,6 +2,11 @@ htick 0.03
 ----------
 
 ----- cvs ci ------
+Mon May  8 17:40:14 NOVST 2000
+max (patch from Alex Bronin):
+* MS Visual C porting
+
+----- cvs ci ------
 Mon May  1 12:40:58 NOVST 2000
 max (patch from Serguei Revtov):
 * "8+3 warn" fixes
